Refactor assistant to use shared types and MCP/session utils; ensure immutable streaming updates and immediate save correctness; add abort handling and explicit Claude model; revive Date objects on session load; pin Claude Code SDK to 1.0.120; add MCP helpers.
Details:
- assistant.tsx: import types from utils, use getMcpServers/resolveWorkingPath, abort controller, immutable updates for partial and final assistant messages, correct immediate save using updated array, show system info in dev, explicit model claude-3-opus-20240229.
- session.ts: revive Date for message timestamps on load; add debounced and immediate save helpers.
- mcp.ts: stdio filesystem server config with ALLOWED_PATHS; availability check; debug logger.
- package.json: pin @anthropic-ai/claude-code to 1.0.120.

Note:
- Left Raycast lint errors (author validation, icon format) untouched to avoid altering publishing metadata and assets.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.64.0",
-    "@anthropic-ai/claude-code": "^1.0.0",
+    "@anthropic-ai/claude-code": "1.0.120",
     "react": "^18.2.0"
   },
   "devDependencies": {
