refactor: migrate from claude-code-sdk to claude-agent-sdk
Breaking Changes:
- Package: claude-code-sdk → claude-agent-sdk
- Class: ClaudeCodeOptions → ClaudeAgentOptions
- Import: claude_code_sdk → claude_agent_sdk

Updated:
- pyproject.toml dependencies
- claude_service.py imports and options initialization
- Verified tests still pass with new SDK version

This migration aligns with Claude Code's official SDK rename and
prepares the codebase for future SDK improvements.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
   "anyio>=4.4",
   "pydantic>=2.7",
   "sse-starlette>=1.8",
-  "claude-code-sdk>=0.0.23",
+  "claude-agent-sdk>=0.1.0",
   "python-dotenv>=1.0"
 ]
 
