fix: address PR review feedback
Critical fixes:
1. Remove build artifacts (__pycache__) accidentally committed
2. Remove unused mcp_registry.py with old SDK import
3. Fix test mocking to patch claude_service (not claude_cli)
4. Update .gitignore to prevent future artifacts

Test changes:
- Fixed monkeypatch targets after CLI module extraction
- Updated login test expectations for synchronous error handling

All tests now pass (6/6) and Swift builds successfully.

Resolves feedback from PR #4 review.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,25 @@ yarn-error.log*
 dist/
 build/
 out/
+.build/
+
+# Swift Package Manager
+.swiftpm/
+*.xcodeproj
+*.xcworkspace
+xcuserdata/
+DerivedData/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
 
 # Logs
 logs/
@@ -36,4 +55,3 @@ logs/
 .cache/
 coverage/
 .venv/
-DerivedData/
